welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:11: error: value elif is not a member of Unit
possible cause: maybe a semicolon is missing before `value elif'?
  } elif (Maths.abs(z)<=5) {
    ^max1020:11: error: not found: value Maths
  } elif (Maths.abs(z)<=5) {
          ^